<package format="2">
  <name>gmsl_driver_nodelet</name>
  <version>0.0.1</version>
  <description>description of the nodelet goes here.</description>
  <maintainer email=""></maintainer>
  <author>Stewart Worrall</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>gmsl_frame_msg</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_definition.xml"/>
  </export>
</package>


